// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design note pin component should match the snapshot of note when repositioning 1`] = `
<button
  aria-label="Comment form position"
  class="gl-absolute gl-display-flex gl-align-items-center gl-justify-content-center gl-font-lg btn-transparent comment-indicator"
  style="left: 10px; top: 10px; cursor: grabbing;"
  type="button"
>
  <gl-icon-stub
    name="image-comment-dark"
    size="24"
  />
</button>
`;

exports[`Design note pin component should match the snapshot of note with index 1`] = `
<button
  aria-label="Comment '1' position"
  class="gl-absolute gl-display-flex gl-align-items-center gl-justify-content-center gl-font-lg js-image-badge badge badge-pill"
  style="left: 10px; top: 10px;"
  type="button"
>
  
    1
  
</button>
`;

exports[`Design note pin component should match the snapshot of note without index 1`] = `
<button
  aria-label="Comment form position"
  class="gl-absolute gl-display-flex gl-align-items-center gl-justify-content-center gl-font-lg btn-transparent comment-indicator"
  style="left: 10px; top: 10px;"
  type="button"
>
  <gl-icon-stub
    name="image-comment-dark"
    size="24"
  />
</button>
`;
